数据库新窗口

--- a/build.properties
+++ b/build.properties
@@ -2,4 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               lib/mq-plugin-util.jar
+jars.compile.order = .,\
+                     lib/mq-plugin-util.jar
+source.lib/mq-plugin-util.jar = 
